--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "clean": "rm -rf .expo node_modules"
   },
   "dependencies": {
+    "@expo-google-fonts/jetbrains-mono": "^0.4.1",
+    "@expo-google-fonts/plus-jakarta-sans": "^0.4.2",
     "@react-navigation/native": "^7.0.0",
     "@rn-primitives/alert-dialog": "^1.2.0",
     "@rn-primitives/dialog": "^1.2.0",
@@ -24,6 +26,7 @@
     "date-fns": "^4.1.0",
     "expo": "~54.0.29",
     "expo-constants": "~18.0.12",
+    "expo-font": "~14.0.10",
     "expo-haptics": "^15.0.8",
     "expo-linking": "~8.0.10",
     "expo-router": "~6.0.19",
